fix z-indexes

--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ button.welcome-button {
   width:100%;
   height:100%;
   background-color: rgba(0,0,0,0);
-  z-index:1;
+  z-index:2;
   display:none;
 }
 
@@ -178,7 +178,7 @@ i.close-button {
 }
 
 #project-carousel {
-  z-index:2;
+  z-index:4;
   margin:auto;
   margin-top:15px;
   margin-left:30px;
